basic deploy and exec

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,7 @@ members = [
   "framework",
   "built-in-services/asset",
   "built-in-services/metadata",
+  "built-in-services/riscv",
 
   "protocol",
 ]
