--- a/built-in-services/riscv/Cargo.toml
+++ b/built-in-services/riscv/Cargo.toml
@@ -17,8 +17,9 @@ rlp = "0.4"
 bytes = "0.5"
 derive_more = "0.15"
 byteorder = "1.3"
-ckb-vm = { git = "https://github.com/huwenchao/ckb-vm", rev = "75016f2" }
+ckb-vm = { git = "https://github.com/huwenchao/ckb-vm", rev = "7aa43ed" }
 hex = "0.4"
+log = "0.4"
 
 [dev-dependencies]
 cita_trie = "2.0"
