--- a/built-in-services/riscv/Cargo.toml
+++ b/built-in-services/riscv/Cargo.toml
@@ -14,7 +14,7 @@ protocol = { path = "../../protocol", package = "muta-protocol" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rlp = "0.4"
-bytes = "0.5"
+bytes = { version = "0.5", features = ["serde"] }
 derive_more = "0.15"
 byteorder = "1.3"
 ckb-vm = { git = "https://github.com/huwenchao/ckb-vm", rev = "7aa43ed" }
