--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ tokio = { version = "0.2", features = ["macros", "rt-core"]}
 [dev-dependencies]
 asset = { path = "built-in-services/asset"}
 metadata = { path = "built-in-services/metadata"}
+riscv = { path = "built-in-services/riscv"}
 
 [workspace]
 members = [
