feat: add call method, add riscv to example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ toml = "0.5"
 
 [dev-dependencies]
 asset = { path = "built-in-services/asset"}
+riscv = { path = "built-in-services/riscv"}
 
 [workspace]
 members = [
