--- a/built-in-services/riscv/Cargo.toml
+++ b/built-in-services/riscv/Cargo.toml
@@ -17,7 +17,7 @@ rlp = "0.4"
 bytes = { version = "0.5", features = ["serde"] }
 derive_more = "0.15"
 byteorder = "1.3"
-ckb-vm = { git = "https://github.com/huwenchao/ckb-vm", rev = "7aa43ed" }
+ckb-vm = { git = "https://github.com/huwenchao/ckb-vm", rev = "7aa43ed", features = ["asm"] }
 hex = "0.4"
 log = "0.4"
 
