--- a/core/network/Cargo.toml
+++ b/core/network/Cargo.toml
@@ -26,10 +26,10 @@ runtime = "0.3.0-alpha.7"
 serde = "1.0"
 serde_derive = "1.0"
 snap = "0.2"
-tentacle = { version = "0.2", features = [ "flatc" ] }
-tentacle-ping = { version = "0.3", features = [ "flatc" ] }
-tentacle-discovery = { version = "0.2", features = [ "flatc" ] }
-tentacle-identify =  { version = "0.2", features = [ "flatc" ] }
+tentacle = { git = "https://github.com/zeroqn/p2p", branch = "muta", features = [ "flatc" ]}
+tentacle-ping = { git = "https://github.com/zeroqn/p2p", branch = "muta", features = [ "flatc" ]}
+tentacle-discovery = { git = "https://github.com/zeroqn/p2p", branch = "muta", features = [ "flatc" ]}
+tentacle-identify = { git = "https://github.com/zeroqn/p2p", branch = "muta", features = [ "flatc" ]}
 tokio = { version = "0.2", features = ["macros", "rt-core"]}
 
 [dev-dependencies]
