--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -18,7 +18,7 @@ futures-timer = "2.0"
 hex = "0.4"
 log = "0.4"
 moodyblues-sdk = "0.2"
-overlord = { git = "https://github.com/nervosnetwork/overlord", rev = "763e51d" }
+overlord = "0.2.0-alpha.1"
 parking_lot = "0.10"
 rlp = "0.4"
 serde = {version = "1.0", features = ["derive"]}
