chore(storage): replace Mutex with RwLock

--- a/core/storage/Cargo.toml
+++ b/core/storage/Cargo.toml
@@ -16,6 +16,7 @@ lazy_static = "1.4"
 parking_lot = "0.9"
 async-trait = "0.1"
 rocksdb = "0.12"
+tokio = { version = "0.2", features = [ "sync" ] }
 
 [dev-dependencies]
 num-traits = "0.2"
