--- a/core/network/Cargo.toml
+++ b/core/network/Cargo.toml
@@ -11,29 +11,27 @@ repository = "https://github.com/nervosnetwork/muta"
 protocol = { path = "../../protocol", package = "muta-protocol" }
 
 async-trait = "0.1"
-bincode = "1.1"
-derive_more = "0.15"
+bincode = "1.2"
+derive_more = "0.99"
 futures-timer = "2.0"
 futures= { version = "0.3", features = [ "compat" ] }
-generic-channel = { version = "0.2", features = [ "all" ] }
+hex = "0.4"
 log = "0.4"
-parking_lot = "0.9"
+parking_lot = "0.10"
 prost = "0.6"
 bytes = "0.5"
 rand = "0.7"
-runtime = "0.3.0-alpha.7"
 serde = "1.0"
 serde_derive = "1.0"
 snap = "0.2"
-tentacle = { version = "0.2", features = [ "flatc" ] }
-tentacle-ping = { version = "0.3", features = [ "flatc" ] }
-tentacle-discovery = { version = "0.2", features = [ "flatc" ] }
-tentacle-identify =  { version = "0.2", features = [ "flatc" ] }
-hex = "0.4"
+tentacle = { git = "https://github.com/zeroqn/p2p", branch = "muta", features = [ "flatc" ]}
+tentacle-ping = { git = "https://github.com/zeroqn/p2p", branch = "muta", features = [ "flatc" ]}
+tentacle-discovery = { git = "https://github.com/zeroqn/p2p", branch = "muta", features = [ "flatc" ]}
+tentacle-identify = { git = "https://github.com/zeroqn/p2p", branch = "muta", features = [ "flatc" ]}
+tokio = { version = "0.2", features = ["macros", "rt-core"]}
 
 [dev-dependencies]
 env_logger = "0.6"
-runtime-tokio = "0.3.0-alpha.6"
 quickcheck = "0.9"
 quickcheck_macros = "0.8"
 lazy_static = "1.4"
