--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ futures = "0.3"
 parking_lot = "0.10"
 serde = "1.0"
 serde_derive = "1.0"
+serde_json = "1.0"
 log = "0.4"
 clap = "2.33"
 bytes = "0.5"
