chore(riscv): only enable duktape for dev and test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,3 +68,14 @@ members = [
 [[example]]
 name = "muta-chain"
 crate-type = ["bin"]
+
+# Make sure cfg(debug-assertions) is properly enabled for development
+# and disable for release.
+[profile.dev]
+debug-assertions = true
+
+[profile.test]
+debug-assertions = true
+
+[profile.release]
+debug-assertions = false
