[ᚬhuobi] [feat] add riscv built-in service (#141)
* basic deploy and exec

* feat: impl basic syscall

* feat: impl sdk sys call

* add call

* [ᚬriscv] Add duktape support (#112)

* chore: add duktape files

* feat(riscv): add basic duktape support

* chore(riscv): use xenial docker image

* feat: add call method, add riscv to example

* gen deploy address from tx hash

* add init call in deploy

* feat: add deploy init run and simple storage example

* [ᚬriscv] Complete duktape ee (#117)

* chore(duktape_ee): load args from PVM function

Currently only support json.

* feat(duktape_ee): capture throw error and return

Should use return code number to determine whether it is error

* chore(duktape_ee): push main identity string

* chore(duktape_ee): rename ret to rc

* chore(duktape_ee): move into helper header file

* feat(duktape_ee): add pvm_cycle_limit support

* temporary

* feat(duktape_ee): add pvm_get_storage and pvm_set_storage support

* feat(duktape_ee): add contract_call support

* chore(duktape_ee): change set_storage and get_storage args to string

* chore(duktape_ee): use dynamic buffer to load args

* chore(duktape_ee): format code

* chore(duktape_ee): return compile error message instead of pvm_debug

* fix(duktape_ee): test code

* fix(duktape_ee): deploy init args should be json now

* feat(duktape_ee): add pvm_is_init support

* chore(duktape_ee): load_json_args now return decoded json

* feat(duktape_ee): add pvm_load_args

* add simple storage example

* add js erc20 example

* feat(duktape_ee): use EVAL, allow multiple functions (#119)

* modify erc20

* feat: add origin and caller sys call

* add ckb ask feature

* update

* fix(duktape_ee): fix pvm syscall

* fix(duktape_ee): force coercing on string value

* dex demo

* fix tests

* fix dex

* fix(duktape_ee): contract call tests

* fix(duktape_ee): init test code

* fix(duktape_ee): use duk_safe

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ tokio = { version = "0.2", features = ["macros", "rt-core"]}
 [dev-dependencies]
 asset = { path = "built-in-services/asset"}
 metadata = { path = "built-in-services/metadata"}
+riscv = { path = "built-in-services/riscv"}
 
 [workspace]
 members = [
@@ -59,6 +60,7 @@ members = [
   "framework",
   "built-in-services/asset",
   "built-in-services/metadata",
+  "built-in-services/riscv",
 
   "protocol",
 ]
@@ -66,3 +68,14 @@ members = [
 [[example]]
 name = "muta-chain"
 crate-type = ["bin"]
+
+# Make sure cfg(debug-assertions) is properly enabled for development
+# and disable for release.
+[profile.dev]
+debug-assertions = true
+
+[profile.test]
+debug-assertions = true
+
+[profile.release]
+debug-assertions = false
