--- a/built-in-services/riscv/examples/dex/package.json
+++ b/built-in-services/riscv/examples/dex/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "muta-sdk": "^0.3.0",
+    "muta-sdk": "^0.7.0-alpha.0",
     "node": "^13.6.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.4"
