--- a/core/mempool/Cargo.toml
+++ b/core/mempool/Cargo.toml
@@ -26,7 +26,7 @@ serde_derive = "1.0"
 serde = "1.0"
 futures-timer = "3.0"
 log = "0.4"
-tokio = { version = "0.2", features = ["macros", "rt-core"]}
+tokio = { version = "0.2", features = ["macros", "rt-core", "sync"]}
 
 [dev-dependencies]
 chashmap = "2.2"
