--- a/core/network/Cargo.toml
+++ b/core/network/Cargo.toml
@@ -35,6 +35,7 @@ env_logger = "0.6"
 quickcheck = "0.9"
 quickcheck_macros = "0.8"
 lazy_static = "1.4"
+tokio = { version = "0.2", features = ["macros", "rt-core"]}
 
 [features]
 allow_global_ip = []
