--- a/devtools/chain/config.toml
+++ b/devtools/chain/config.toml
@@ -8,6 +8,8 @@ data_path = "./devtools/chain/data"
 listening_address = "0.0.0.0:8000"
 graphql_uri = "/graphql"
 graphiql_uri = "/graphiql"
+workers = 0 # if 0, uses number of available logical cpu as threads count.
+maxconn = 25000
 
 [network]
 listening_address = "0.0.0.0:1337"
