--- a/core/api/Cargo.toml
+++ b/core/api/Cargo.toml
@@ -11,9 +11,6 @@ repository = "https://github.com/nervosnetwork/muta"
 protocol = { path = "../../protocol", package = "muta-protocol" }
 common-crypto = { path = "../../common/crypto"}
 
-http-service = "0.4"
-http = "0.2"
-tide = "0.6"
 juniper = { git = "https://github.com/graphql-rust/juniper", rev = "eff086a", features = ["async"] }
 juniper_codegen = "0.14"
 async-trait = "0.1"
@@ -22,3 +19,8 @@ futures = "0.3"
 derive_more = "0.15"
 cita_trie = "2.0"
 bytes = "0.5"
+actix-web = "2.0"
+actix-rt = "1.0"
+serde_json = "1.0"
+lazy_static = "1.4"
+num_cpus = "1.12"
