change: config in four nodes genesis

--- a/examples/gensis.toml
+++ b/examples/gensis.toml
@@ -53,5 +53,7 @@ payload = '''
     "prevote_ratio": 10,
     "precommit_ratio": 10,
     "brake_ratio": 7
+    "tx_num_limit": 20000,
+    "max_tx_size": 1024
 }
 '''
