change: rename genesis.toml

--- a/examples/genesis.toml
+++ b/examples/genesis.toml
@@ -54,6 +54,6 @@ payload = '''
     "precommit_ratio": 10,
     "brake_ratio": 7
     "tx_num_limit": 20000,
-    "max_tx_size": 1024
+    "max_tx_size": 1024,
 }
 '''
