--- a/examples/genesis.toml
+++ b/examples/genesis.toml
@@ -52,8 +52,8 @@ payload = '''
     "propose_ratio": 15,
     "prevote_ratio": 10,
     "precommit_ratio": 10,
-    "brake_ratio": 7
+    "brake_ratio": 7,
     "tx_num_limit": 20000,
-    "max_tx_size": 1024,
+    "max_tx_size": 1024
 }
 '''
