--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ bytes = "0.5"
 hex = "0.4"
 rlp = "0.4"
 toml = "0.5"
-tokio = { version = "0.2", features = ["macros", "rt-core", "rt-util"]}
+tokio = { version = "0.2", features = ["macros", "rt-core", "rt-util", "signal", "time"]}
 
 [dev-dependencies]
 asset = { path = "built-in-services/asset"}
