--- a/devtools/docker/dockercompose/docker-compose-bft.yaml
+++ b/devtools/docker/dockercompose/docker-compose-bft.yaml
@@ -3,14 +3,15 @@ version: '2'
 services:
   bft_node1:
     container_name: bft_node1
-    image: nervos/muta:latest
+    image: mutadev/muta:latest
     hostname: bft_node1
     environment:
-      - RUST_LOG 
-      - RUST_BACKTRACE 
+      - RUST_LOG
+      - RUST_BACKTRACE
     volumes:
       - ./config-bft-1.toml:/app/devtools/chain/config.toml
-      - ../../../target/data/bft1:/app/devtools/chain/data
+      - ./genesis-bft.toml:/app/devtools/chain/genesis.toml
+      - /tmp/data/bft-1:/app/devtools/chain/data
     networks:
       bft:
         aliases:
@@ -23,16 +24,17 @@ services:
 
   bft_node2:
     container_name: bft_node2
-    image: nervos/muta:latest
+    image: mutadev/muta:latest
     hostname: bft_node2
     environment:
-      - RUST_LOG 
-      - RUST_BACKTRACE 
+      - RUST_LOG
+      - RUST_BACKTRACE
     depends_on:
       - bft_node1
     volumes:
       - ./config-bft-2.toml:/app/devtools/chain/config.toml
-      - ../../../target/data/bft2:/app/devtools/chain/data
+      - ./genesis-bft.toml:/app/devtools/chain/genesis.toml
+      - /tmp/data/bft-2:/app/devtools/chain/data
     networks:
       bft:
         aliases:
@@ -45,16 +47,17 @@ services:
 
   bft_node3:
     container_name: bft_node3
-    image: nervos/muta:latest
+    image: mutadev/muta:latest
     hostname: bft_node3
     environment:
-      - RUST_LOG 
-      - RUST_BACKTRACE 
+      - RUST_LOG
+      - RUST_BACKTRACE
     depends_on:
       - bft_node1
     volumes:
       - ./config-bft-3.toml:/app/devtools/chain/config.toml
-      - ../../../target/data/bft3:/app/devtools/chain/data
+      - ./genesis-bft.toml:/app/devtools/chain/genesis.toml
+      - /tmp/data/bft-3:/app/devtools/chain/data
     networks:
       bft:
         aliases:
@@ -67,16 +70,17 @@ services:
 
   bft_node4:
     container_name: bft_node4
-    image: nervos/muta:latest
+    image: mutadev/muta:latest
     hostname: bft_node4
     environment:
-      - RUST_LOG 
-      - RUST_BACKTRACE 
+      - RUST_LOG
+      - RUST_BACKTRACE
     depends_on:
       - bft_node1
     volumes:
       - ./config-bft-4.toml:/app/devtools/chain/config.toml
-      - ../../../target/data/bft4:/app/devtools/chain/data
+      - ./genesis-bft.toml:/app/devtools/chain/genesis.toml
+      - /tmp/data/bft-4:/app/devtools/chain/data
     networks:
       bft:
         aliases:
