--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -30,3 +30,4 @@ log = "0.4"
 async-trait = "0.1"
 toml = "0.5"
 binding-macro = { path = "../binding-macro" }
+serde = { version = "1.0", features = ["derive"] }
