change: rlp to protobuf

--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -20,6 +20,7 @@ log = "0.4"
 moodyblues-sdk = "0.3"
 overlord = "0.2.0-alpha.10"
 parking_lot = "0.10"
+prost = "0.6"
 rlp = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
