--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -37,6 +37,7 @@ protocol = { path = "../../protocol", package = "muta-protocol" }
 [dev-dependencies]
 num-traits = "0.2"
 rand = "0.7"
+bit-vec = "0.6"
 
 [features]
 default = []
