update config files

--- a/devtools/chain/config.toml
+++ b/devtools/chain/config.toml
@@ -40,3 +40,6 @@ log_to_file = true
 metrics = true
 # you can specify log level for modules with config below
 # modules_level = { "overlord::state::process" = "debug", core_consensus = "error" }
+
+[rocksdb]
+max_open_files = 64
