--- a/core/network/Cargo.toml
+++ b/core/network/Cargo.toml
@@ -29,12 +29,14 @@ tentacle-ping = { git = "https://github.com/zeroqn/p2p", branch = "muta-disc", f
 tentacle-discovery = { git = "https://github.com/zeroqn/p2p", branch = "muta-disc", features = [ "flatc" ]}
 tentacle-identify = { git = "https://github.com/zeroqn/p2p", branch = "muta-disc", features = [ "flatc" ]}
 tokio = { version = "0.2", features = ["macros", "rt-core"]}
+hostname = "0.3"
 
 [dev-dependencies]
 env_logger = "0.6"
 quickcheck = "0.9"
 quickcheck_macros = "0.8"
 lazy_static = "1.4"
+tokio = { version = "0.2", features = ["macros", "rt-core"]}
 
 [features]
 allow_global_ip = []
