--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -24,7 +24,7 @@ prost = "0.6"
 rlp = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "0.2", features = ["macros", "rt-core"] }
+tokio = { version = "0.2", features = ["macros", "sync", "rt-core"] }
 
 common-crypto = { path = "../../common/crypto" }
 common-logger = { path = "../../common/logger" }
