--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ asset = { path = "built-in-services/asset"}
 metadata = { path = "built-in-services/metadata"}
 util = { path = "built-in-services/util"}
 rand = "0.7"
+cita_trie = "2.0"
 
 [workspace]
 members = [
