--- a/core/network/Cargo.toml
+++ b/core/network/Cargo.toml
@@ -40,6 +40,7 @@ tokio = { version = "0.2", features = ["macros", "rt-core"]}
 
 [features]
 allow_global_ip = []
+diagnostic = []
 
 [[test]]
 name = "broadcast"
