fix pr review, add service err return, add test_verify

--- a/built-in-services/util/Cargo.toml
+++ b/built-in-services/util/Cargo.toml
@@ -19,6 +19,7 @@ derive_more = "0.15"
 byteorder = "1.3"
 common-crypto = { path = "../../common/crypto" }
 hex = "0.4"
+rand = "0.7"
 
 [dev-dependencies]
 cita_trie = "2.0"
