--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -28,6 +28,7 @@ rlp = "0.4"
 cita_trie = "2.0"
 json = "0.12"
 byteorder = "1.3"
+fixed-codec-derive = { git = "https://github.com/nervosnetwork/muta-utils.git", rev = "d9146fb" }
 
 [dev-dependencies]
 num-traits = "0.2"
