--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -8,37 +8,33 @@ repository = "https://github.com/nervosnetwork/muta"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+parking_lot = "0.10"
 async-trait = "0.1"
+creep = "0.2"
+hex = "0.4"
+rlp = "0.4"
+log = "0.4"
+prost = "0.6"
 bincode = "1.2"
 cita_trie = "2.0"
-creep = "0.2"
-derive_more = "0.99"
-futures = { version = "0.3", features = ["async-await"] }
-futures-timer = "3.0"
-hex = "0.4"
-log = "0.4"
-moodyblues-sdk = "0.3"
-overlord = "0.2.0-alpha.11"
-parking_lot = "0.10"
-prost = "0.6"
-rlp = "0.4"
-serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+derive_more = "0.99"
+futures-timer = "3.0"
+moodyblues-sdk = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+futures = { version = "0.3", features = ["async-await"] }
 tokio = { version = "0.2", features = ["macros", "sync", "rt-core"] }
+overlord = { git = "https://github.com/rev-chaos/overlord", branch = "refactor_overlord" }
 
-common-crypto = { path = "../../common/crypto" }
-common-logger = { path = "../../common/logger" }
-common-merkle = { path = "../../common/merkle" }
 core-mempool = { path = "../../core/mempool" }
 core-storage = { path = "../../core/storage" }
 core-network = { path = "../../core/network" }
+common-crypto = { path = "../../common/crypto" }
+common-logger = { path = "../../common/logger" }
+common-merkle = { path = "../../common/merkle" }
 protocol = { path = "../../protocol", package = "muta-protocol" }
 
 [dev-dependencies]
 num-traits = "0.2"
 rand = "0.7"
 bit-vec = "0.6"
-
-[features]
-default = []
-random_leader = ["overlord/random_leader"]
