--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -24,7 +24,7 @@ moodyblues-sdk = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 futures = { version = "0.3", features = ["async-await"] }
 tokio = { version = "0.2", features = ["macros", "sync", "rt-core"] }
-overlord = { git = "https://github.com/rev-chaos/overlord", branch = "refactor_overlord" }
+overlord = { git = "https://github.com/rev-chaos/overlord", rev = "2c4b7bd1" }
 
 core-mempool = { path = "../../core/mempool" }
 core-storage = { path = "../../core/storage" }
