--- a/core/mempool/Cargo.toml
+++ b/core/mempool/Cargo.toml
@@ -16,17 +16,16 @@ futures = { version = "0.3", features = [ "async-await" ] }
 crossbeam-queue = "0.2"
 derive_more = "0.99"
 async-trait = "0.1"
-parking_lot = "0.10"
 num-traits = "0.2"
 bytes = "0.5"
-rayon = "1.3"
 rand = "0.7"
 hex = "0.4"
 serde_derive = "1.0"
 serde = "1.0"
 futures-timer = "3.0"
 log = "0.4"
-tokio = { version = "0.2", features = ["macros", "rt-core", "sync"]}
+tokio = { version = "0.2", features = ["macros", "rt-core", "sync", "blocking"]}
 
 [dev-dependencies]
 chashmap = "2.2"
+parking_lot = "0.10"
