--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -34,6 +34,8 @@ core-storage = { path = "../../core/storage" }
 core-network = { path = "../../core/network" }
 protocol = { path = "../../protocol", package = "muta-protocol" }
 
+muta-apm = "0.1.0-alpha.4"
+
 [dev-dependencies]
 num-traits = "0.2"
 rand = "0.7"
