test(network): trust metric integrated test (#246)
* cargo fmt

fix ci

* change(consensus): introduce network trust feedback

* follow review opinion

* chore: update overlord version

* change(consensus): remove outdated FIXME

* change(consensus): trust metric feedback level

* change(consensus): propagate if sync respnse error

* chore: upgrade overlord

For trust metric integration

* add trust metric in mempool

* test: expose consensus network message structs

* test: replace session id in context with usize

* test: use async_trait pub from protocol

* change(mempool): remove outdated FIXME

* fix(mempool): no peer id in context for trust metric feedback

* fix(mempool): rebase master

* test: basic full node and test node integrated test

* change: expose network ping interval configuration

* test: set ping interval to 9999 to disable it

* test(mempool): expose MsgNewTxs for integrated test

* test: use END_GOSSIP_NEW_TXS to test whether we are disconnected

* test: experiment mempool broadcast new txs

* test(trust-metric): don't start graphql service on full node

* test(trust-metric): replace rocksdb with memorydb

* test(trust-metric): use random temporary directory for wal path

* test(trust-metric): format code

* test(trust-metric): refactor node code

Able to run test concurrently

* test(trust-metric): add available_port_pair()

So that we can run multiple nodes concurrently

* test(trust-metric): fix logger panic

* test(trust-metric): use diagnostic endpoint instead of hardcode timeout

Use this diagnostic endpoint to check whether full node is connected

* feat(network): add diagnostic behind feature gate

* test(trust-metric): use network diagnostic feature to check connection

* change(network): add WORSE_TRUST_SCALAR_RATIO

Instead of hardcode worse in function code

* feat(network): expose trust metric basic function to diagnostic

* test(trust-metric): integrate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,9 @@ tokio = { version = "0.2", features = ["macros", "rt-core", "rt-util", "signal",
 asset = { path = "built-in-services/asset"}
 metadata = { path = "built-in-services/metadata"}
 util = { path = "built-in-services/util"}
+rand = "0.7"
+cita_trie = "2.0"
+core-network = { path = "./core/network", features = ["diagnostic"] }
 
 [workspace]
 members = [
@@ -68,3 +71,8 @@ members = [
 [[example]]
 name = "muta-chain"
 crate-type = ["bin"]
+
+[[test]]
+name = "trust_metric"
+path = "tests/trust_metric.rs"
+required-features = [ "core-network/diagnostic" ]
