--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ muta-apm = "0.1.0-alpha.7"
 asset = { path = "built-in-services/asset"}
 metadata = { path = "built-in-services/metadata"}
 util = { path = "built-in-services/util"}
+account = { path = "built-in-services/account" }
 rand = "0.7"
 cita_trie = "2.0"
 core-network = { path = "./core/network", features = ["diagnostic"] }
