--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -13,6 +13,7 @@ protocol = { path = "../protocol", package = "muta-protocol" }
 asset = { path = "../built-in-services/asset"}
 metadata = { path = "../built-in-services/metadata"}
 util = { path = "../built-in-services/util"}
+account = { path = "../built-in-services/account"}
 
 hasher = { version = "0.1", features = ['hash-keccak'] }
 cita_trie = "2.0"
