--- a/core/mempool/Cargo.toml
+++ b/core/mempool/Cargo.toml
@@ -12,6 +12,7 @@ protocol = { path = "../../protocol", package = "muta-protocol" }
 common-apm = { path = "../../common/apm" }
 common-crypto = { path = "../../common/crypto" }
 core-network = { path = "../network" }
+cita_trie = "2.0"
 
 
 futures = { version = "0.3", features = [ "async-await" ] }
@@ -24,6 +25,7 @@ rand = "0.7"
 hex = "0.4"
 serde_derive = "1.0"
 serde = "1.0"
+serde_json = "1.0"
 futures-timer = "3.0"
 log = "0.4"
 tokio = { version = "0.2", features = ["macros", "rt-core", "sync", "blocking"]}
