--- a/common/metrics/Cargo.toml
+++ b/common/metrics/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/nervosnetwork/muta"
 [dependencies]
 protocol = { path = "../../protocol", package = "muta-protocol" }
 
-prometheus = "0.8"
-prometheus-static-metric = "0.2"
+prometheus = { git = "https://github.com/tikv/rust-prometheus.git", rev = "fd122caa03" }
+prometheus-static-metric = { git = "https://github.com/tikv/rust-prometheus.git", rev = "fd122caa03" }
 derive_more = "0.99"
 lazy_static = "1.4"
