--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2018"
 repository = "https://github.com/nervosnetwork/muta"
 
 [dependencies]
-common-logger = { path = "./common/logger" }
+common-apm = { path = "./common/apm" }
 common-config-parser = { path = "./common/config-parser" }
 common-crypto = { path = "./common/crypto" }
+common-logger = { path = "./common/logger" }
 protocol = { path = "./protocol", package = "muta-protocol" }
 core-api = { path = "./core/api" }
 core-storage = { path = "./core/storage" }
