--- a/core/api/Cargo.toml
+++ b/core/api/Cargo.toml
@@ -9,7 +9,8 @@ repository = "https://github.com/nervosnetwork/muta"
 
 [dependencies]
 protocol = { path = "../../protocol", package = "muta-protocol" }
-common-crypto = { path = "../../common/crypto"}
+common-apm = { path = "../../common/apm" }
+common-crypto = { path = "../../common/crypto" }
 
 juniper = { git = "https://github.com/graphql-rust/juniper", rev = "eff086a", features = ["async"] }
 juniper_codegen = "0.14"
