--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -26,6 +26,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "0.2", features = ["macros", "sync", "rt-core"] }
 
+common-apm = { path = "../../common/apm" }
 common-crypto = { path = "../../common/crypto" }
 common-logger = { path = "../../common/logger" }
 common-merkle = { path = "../../common/merkle" }
