--- a/core/storage/Cargo.toml
+++ b/core/storage/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/nervosnetwork/muta"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+common-apm = { path = "../../common/apm" }
 protocol = { path = "../../protocol", package = "muta-protocol" }
 
 futures = "0.3"
@@ -17,7 +18,6 @@ parking_lot = "0.10"
 async-trait = "0.1"
 rocksdb = "0.12"
 tokio = { version = "0.2", features = [ "sync" ] }
-muta-apm = "0.1.0-alpha.7"
 
 [dev-dependencies]
 num-traits = "0.2"
