chore(metrics): move into common-apm

--- a/common/apm/Cargo.toml
+++ b/common/apm/Cargo.toml
@@ -8,4 +8,10 @@ repository = "https://github.com/nervosnetwork/muta"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+protocol = { path = "../../protocol", package = "muta-protocol" }
+
 muta-apm = "0.1.0-alpha.7"
+prometheus = { git = "https://github.com/tikv/rust-prometheus.git", rev = "fd122caa03" }
+prometheus-static-metric = { git = "https://github.com/tikv/rust-prometheus.git", rev = "fd122caa03" }
+derive_more = "0.99"
+lazy_static = "1.4"
