--- a/common/merkle/Cargo.toml
+++ b/common/merkle/Cargo.toml
@@ -11,3 +11,6 @@ repository = "https://github.com/nervosnetwork/muta"
 protocol = { path = "../../protocol", package = "muta-protocol" }
 rayon = "1.3"
 static_merkle_tree = "1.1.0"
+
+[dev-dependencies]
+rand = "0.7"
