--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -17,7 +17,7 @@ util = { path = "../built-in-services/util"}
 hasher = { version = "0.1", features = ['hash-keccak'] }
 cita_trie = "2.0"
 bytes = "0.5"
-derive_more = "0.15"
+derive_more = "0.99"
 rocksdb = "0.12"
 lazy_static = "1.4"
 byteorder = "1.3"
@@ -27,9 +27,12 @@ json = "0.12"
 hex = "0.4"
 serde_json = "1.0"
 log = "0.4"
+rayon = "1.3"
 
 [dev-dependencies]
 async-trait = "0.1"
 toml = "0.5"
 binding-macro = { path = "../binding-macro" }
+rand = "0.7"
 serde = { version = "1.0", features = ["derive"] }
+muta-codec-derive = "0.2"
