--- a/core/storage/Cargo.toml
+++ b/core/storage/Cargo.toml
@@ -23,3 +23,4 @@ tokio = { version = "0.2", features = [ "sync" ] }
 num-traits = "0.2"
 rand = "0.6"
 hex = "0.4"
+tokio = { version = "0.2", features = ["macros", "rt-core", "rt-util", "signal", "time"]}
