--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -25,6 +25,7 @@ rlp = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "0.2", features = ["macros", "sync", "rt-core"] }
+bytes = { version = "0.5", features = ["serde"] }
 
 common-apm = { path = "../../common/apm" }
 common-crypto = { path = "../../common/crypto" }
