--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ rlp = "0.4"
 toml = "0.5"
 tokio = { version = "0.2", features = ["macros", "rt-core", "rt-util", "signal", "time"]}
 muta-apm = "0.1.0-alpha.7"
+futures-timer="3.0"
 
 [dev-dependencies]
 asset = { path = "built-in-services/asset"}
