--- a/core/storage/Cargo.toml
+++ b/core/storage/Cargo.toml
@@ -16,10 +16,11 @@ derive_more = "0.15"
 lazy_static = "1.4"
 parking_lot = "0.10"
 async-trait = "0.1"
-rocksdb = "0.12"
+rocksdb = "0.14"
 tokio = { version = "0.2", features = [ "sync" ] }
 
 [dev-dependencies]
 num-traits = "0.2"
 rand = "0.6"
 hex = "0.4"
+tokio = { version = "0.2", features = ["macros", "rt-core", "rt-util", "signal", "time"]}
