--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,9 +39,10 @@ futures-timer="3.0"
 
 [dev-dependencies]
 asset = { path = "built-in-services/asset" }
-metadata = { path = "built-in-services/metadata" }
-util = { path = "built-in-services/util" }
 multi-signature = { path = "built-in-services/multi-signature" }
+authorization = { path = "built-in-services/authorization" }
+metadata = { path = "built-in-services/metadata"}
+util = { path = "built-in-services/util"}
 rand = "0.7"
 cita_trie = "2.0"
 core-network = { path = "./core/network", features = ["diagnostic"] }
@@ -68,6 +69,7 @@ members = [
   "built-in-services/asset",
   "built-in-services/metadata",
   "built-in-services/multi-signature",
+  "built-in-services/authorization",
 
   "protocol",
 ]
