--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ members = [
   "framework",
   "built-in-services/asset",
   "built-in-services/metadata",
+  "built-in-services/multi-signature",
 
   "protocol",
 ]
