feat(service)!: add authorization service for mempool (#320)
* feat: add authorization service

* feat: mempool check authorization by service

* add set admin function

* tmp

* feat: verify signature when new authorization

* feat: register multi_signature

* encode json twice

* fix

* refactor executor

* test: update muta sdk version for checking multi sig with mempool changes

* fix unit test

* cargo fmt

* fix decode may panic

* cargo clippy

* change verify signature api

* test(e2e): add multi signature testcase

Co-authored-by: homura <homura.dev@gmail.com>
Co-authored-by: zero.qn <zero.qn@outlook.com>

--- a/core/mempool/Cargo.toml
+++ b/core/mempool/Cargo.toml
@@ -23,11 +23,13 @@ bytes = "0.5"
 rand = "0.7"
 hex = "0.4"
 serde_derive = "1.0"
+serde_json = "1.0"
 serde = "1.0"
 futures-timer = "3.0"
 log = "0.4"
 tokio = { version = "0.2", features = ["macros", "rt-core", "sync", "blocking"]}
 muta-apm = "0.1.0-alpha.7"
+cita_trie = "2.0"
 
 [dev-dependencies]
 chashmap = "2.2"
