--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -1,1 +1,29 @@
-buildPack: rust
+buildPack: none
+pipelineConfig:
+  pipelines:
+    pullRequest:
+      pipeline:
+        agent:
+          image: mutadev/muta:build-env
+        stages:
+            options:
+              containerOptions:
+                resources:
+                  limits:
+                    cpu: 4
+                    memory: 4Gi
+                  requests:
+                    cpu: 2
+                    memory: 2Gi
+            steps:
+              - name: ci
+                command: make
+                args: ['ci']
+
+              - name: e2e
+                command: make
+                args: ['e2e-test']
+
+              - name: release-build
+                command: make
+                args: ['prod']
